--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.35",
+    "expo": "~52.0.36",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.4",
-    "expo-font": "~13.0.3",
+    "expo-constants": "~17.0.7",
+    "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
@@ -46,7 +47,8 @@
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "jest-expo": "~52.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
