Added google sign in with clerk

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -174,3 +174,5 @@ dependencies {
         implementation jscFlavor
     }
 }
+// Add this line at the very bottom of the file
+apply plugin: 'com.google.gms.google-services'
