--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-EXPO_PUBLIC_IOS_GOOGLE_API_KEY = "1098728948199-rme79mncl3mki5npag9m8uc3k4uu618d.apps.googleusercontent.com"
-
-# SOMTHING ="1098728948199-rme79mncl3mki5npag9m8uc3k4uu618d.apps.googleusercontent.com"
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aGFybWxlc3MtZ3JpenpseS03OS5jbGVyay5hY2NvdW50cy5kZXYk
