--- a/app.json
+++ b/app.json
@@ -14,7 +14,6 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
-      
     },
     "android": {
       "adaptiveIcon": {
@@ -44,28 +43,12 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ],
-      "expo-secure-store",
       "expo-font"
     ],
-    "experiments": {
-      "typedRoutes": true
-    },
     "extra": {
-      "router": {
-        "origin": false
-      },
+      "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_aGFybWxlc3MtZ3JpenpseS03OS5jbGVyay5hY2NvdW50cy5kZXYk",
       "eas": {
-        "projectId": "dbcbdbbf-1d56-480a-9807-fc1ca5784bfd"
+        "projectId": "your-project-id"
       }
     }
   }
