--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.8.5",
+    "@clerk/clerk-react": "^5.24.2",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^21.12.0",
+    "@react-native-firebase/auth": "^21.12.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.36",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.7",
+    "expo-build-properties": "^0.13.2",
+    "expo-constants": "~17.0.8",
     "expo-dev-client": "^5.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -39,6 +44,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "firebase": "^11.4.0",
     "jest-expo": "~52.0.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -58,6 +64,7 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
